<resources>
    <!--Login Page-->

    <string name="app_name">Finanças Simples</string>
    <string name="login">Entrar</string>
    <string name="register">Registrar</string>
    <string name="btn_enter_login">Entrar</string>
    <string name="btn_register_login_screen">Registrar</string>
    <string name="logo">Logo Finanças Simples</string>
    <string name="input_email">E-mail</string>

    <!--Register Page-->

    <string name="register_name">Nome</string>
    <string name="dt_Birth_Date_Register">Data de Nascimento</string>
    <string name="gender_register">Gênero</string>
    <string name="other_gender_button">Outro</string>
    <string name="password_register">Senha</string>
    <string name="confirm_password_register">Confirmar Senha</string>
    <string name="btn_new_register">Cadastrar</string>
    <string name="btn_new_movement">Salvar</string>
    <string name="radio_female">Feminino</string>
    <string name="radio_male">Masculino</string>
    <string name="email_register">E-mail</string>
    <string name="input_password">Senha</string>

    <!--    navigation drawer-->

    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Finanças Simples</string>
    <string name="nav_header_subtitle">financassimples@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    navigation nav menu-->

    <string name="menu_home">Home</string>
    <string name="menu_new_movement">Nova movimentação</string>
    <string name="menu_my_investment">Meus investimentos</string>
    <string name="menu_my_movement">Minhas movimentações</string>
    <string name="menu_my_profile">Editar minhas informações</string>
    <string name="menu_logout">Sair</string>
    <string name="installment">Despesa parcelada?</string>
    <string name="movement_description">Descrição</string>
    <string name="movement_installment">Parcelas</string>
    <string name="movement_value">Valor</string>

    <!--    nem movement fragment-->

    <string-array name="movement_type_array">

        <item>Selecione:</item>
        <item>Crédito</item>
        <item>Saque</item>
        <item>Investimento</item>
        <item>Despesa</item>

    </string-array>

    <string-array name="movement_category_array">
        <item>Selecione:</item>
        <item>Nenhum</item>
        <item>Supermercado</item>
        <item>Saúde</item>
        <item>Vestuário</item>
        <item>Cuidados pessoais</item>
        <item>Comida</item>
        <item>Pet</item>
        <item>Transporte</item>
        <item>Investimento</item>
        <item>Outros</item>
    </string-array>

    <string-array name="investiment_type_array">
        <item>Selecione:</item>
        <item>Poupança</item>
        <item>Ações</item>
        <item>Fundo imobiliário</item>
        <item>Previdência</item>
        <item>Outro</item>

    </string-array>

</resources>