<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_movement"
            android:icon="@drawable/ic_new_movement"
            android:title="@string/menu_new_movement" />
        <item
            android:id="@+id/nav_my_investment"
            android:icon="@drawable/ic_my_investment"
            android:title="@string/menu_my_investment" />
        <item
            android:id="@+id/nav_my_movement"
            android:icon="@drawable/ic_my_movement"
            android:title="@string/menu_my_movement" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_my_profile"
            android:title="@string/menu_my_profile" />
    </group>
</menu>